로직 정보 파일 저장 기능 추가

--- a/BE/settings.json
+++ b/BE/settings.json
@@ -8,5 +8,26 @@
             "width": 900,
             "height": 1600
         }
+    },
+    "logics": {
+        "테스트": {
+            "name": "테스트",
+            "items": [
+                "키 입력: A --- 누르기",
+                "키 입력: A --- 떼기",
+                "지연시간 : 0.010초",
+                "키 입력: Shift+오른쪽 쉬프트 --- 누르기",
+                "키 입력: G --- 누르기",
+                "키 입력: G --- 떼기",
+                "키 입력: Shift+오른쪽 쉬프트 --- 떼기"
+            ],
+            "trigger_key": {
+                "key_code": "F",
+                "scan_code": 33,
+                "virtual_key": 70,
+                "display_text": "키: F, 스캔 코드 (하드웨어 고유값): 33, 확장 가상 키 (운영체제 레벨의 고유 값): 70, 키보드 위치: 메인, 수정자 키: 없음",
+                "modifiers": 0
+            }
+        }
     }
 }
