로직 반복 수행 기능 구현

--- a/BE/settings.json
+++ b/BE/settings.json
@@ -1,8 +1,8 @@
 {
     "window": {
         "position": {
-            "x": 2772,
-            "y": 51
+            "x": 2137,
+            "y": 132
         },
         "size": {
             "width": 900,
@@ -77,6 +77,7 @@
                     "virtual_key": 32
                 }
             ],
+            "repeat_count": 1,
             "trigger_key": {
                 "key_code": "키 코드 192",
                 "scan_code": 41,
@@ -227,143 +228,9 @@
                     "display_text": "지연시간 : 0.013초",
                     "duration": 0.013,
                     "type": "delay"
-                },
-                {
-                    "action": "누르기",
-                    "display_text": "키 입력: 왼쪽 쉬프트 --- 누르기",
-                    "key_code": "왼쪽 쉬프트",
-                    "modifiers": 0,
-                    "scan_code": 42,
-                    "type": "key_input",
-                    "virtual_key": 160
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "누르기",
-                    "display_text": "키 입력: Z --- 누르기",
-                    "key_code": "Z",
-                    "modifiers": 0,
-                    "scan_code": 44,
-                    "type": "key_input",
-                    "virtual_key": 90
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "떼기",
-                    "display_text": "키 입력: Z --- 떼기",
-                    "key_code": "Z",
-                    "modifiers": 0,
-                    "scan_code": 44,
-                    "type": "key_input",
-                    "virtual_key": 90
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "떼기",
-                    "display_text": "키 입력: Shift+왼쪽 쉬프트 --- 떼기",
-                    "key_code": "왼쪽 쉬프트",
-                    "modifiers": 33554432,
-                    "scan_code": 42,
-                    "type": "key_input",
-                    "virtual_key": 160
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "누르기",
-                    "display_text": "키 입력: G --- 누르기",
-                    "key_code": "G",
-                    "modifiers": 0,
-                    "scan_code": 34,
-                    "type": "key_input",
-                    "virtual_key": 71
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "떼기",
-                    "display_text": "키 입력: G --- 떼기",
-                    "key_code": "G",
-                    "modifiers": 0,
-                    "scan_code": 34,
-                    "type": "key_input",
-                    "virtual_key": 71
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "누르기",
-                    "display_text": "키 입력: Home --- 누르기",
-                    "key_code": "Home",
-                    "modifiers": 0,
-                    "scan_code": 71,
-                    "type": "key_input",
-                    "virtual_key": 36
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "떼기",
-                    "display_text": "키 입력: Home --- 떼기",
-                    "key_code": "Home",
-                    "modifiers": 0,
-                    "scan_code": 71,
-                    "type": "key_input",
-                    "virtual_key": 36
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "누르기",
-                    "display_text": "키 입력: 엔터 --- 누르기",
-                    "key_code": "엔터",
-                    "modifiers": 0,
-                    "scan_code": 28,
-                    "type": "key_input",
-                    "virtual_key": 13
-                },
-                {
-                    "display_text": "지연시간 : 0.013초",
-                    "duration": 0.013,
-                    "type": "delay"
-                },
-                {
-                    "action": "떼기",
-                    "display_text": "키 입력: 엔터 --- 떼기",
-                    "key_code": "엔터",
-                    "modifiers": 0,
-                    "scan_code": 28,
-                    "type": "key_input",
-                    "virtual_key": 13
                 }
             ],
+            "repeat_count": 4,
             "trigger_key": {
                 "key_code": "숫자패드 /",
                 "scan_code": 53,
