--- a/BE/settings.json
+++ b/BE/settings.json
@@ -10,78 +10,33 @@
         }
     },
     "logics": {
-        "xxx": {
-            "name": "xxx",
+        "보호 무장": {
+            "name": "보호 무장",
             "items": [
                 {
-                    "action": "떼기",
-                    "display_text": "키 입력: A --- 떼기",
-                    "key_code": "A",
-                    "modifiers": 0,
-                    "scan_code": 30,
-                    "type": "key_input",
-                    "virtual_key": 65
-                },
-                {
                     "action": "누르기",
-                    "display_text": "키 입력: A --- 누르기",
-                    "key_code": "A",
-                    "modifiers": 0,
-                    "scan_code": 30,
+                    "display_text": "키 입력: Shift+Z --- 누르기",
+                    "key_code": "Z",
+                    "modifiers": 33554432,
+                    "scan_code": 44,
                     "type": "key_input",
-                    "virtual_key": 65
+                    "virtual_key": 90
                 },
                 {
                     "action": "떼기",
-                    "display_text": "키 입력: A --- 떼기",
-                    "key_code": "A",
-                    "modifiers": 0,
-                    "scan_code": 30,
+                    "display_text": "키 입력: Shift+Z --- 떼기",
+                    "key_code": "Z",
+                    "modifiers": 33554432,
+                    "scan_code": 44,
                     "type": "key_input",
-                    "virtual_key": 65
-                },
-                {
-                    "action": "누르기",
-                    "display_text": "키 입력: Space --- 누르기",
-                    "key_code": "Space",
-                    "modifiers": 0,
-                    "scan_code": 57,
-                    "type": "key_input",
-                    "virtual_key": 32
-                },
-                {
-                    "action": "떼기",
-                    "display_text": "키 입력: Space --- 떼기",
-                    "key_code": "Space",
-                    "modifiers": 0,
-                    "scan_code": 57,
-                    "type": "key_input",
-                    "virtual_key": 32
-                },
-                {
-                    "action": "누르기",
-                    "display_text": "키 입력: Space --- 누르기",
-                    "key_code": "Space",
-                    "modifiers": 0,
-                    "scan_code": 57,
-                    "type": "key_input",
-                    "virtual_key": 32
-                },
-                {
-                    "action": "떼기",
-                    "display_text": "키 입력: Space --- 떼기",
-                    "key_code": "Space",
-                    "modifiers": 0,
-                    "scan_code": 57,
-                    "type": "key_input",
-                    "virtual_key": 32
+                    "virtual_key": 90
                 }
             ],
             "repeat_count": 1,
             "trigger_key": {
-                "key_code": "키 코드 192",
-                "scan_code": 41,
-                "virtual_key": 192,
+                "key_code": "숫자패드 .",
+                "scan_code": 83,
+                "virtual_key": 110,
                 "display_text": "",
                 "modifiers": 0
             }
@@ -99,8 +54,8 @@
                     "virtual_key": 160
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -113,8 +68,8 @@
                     "virtual_key": 90
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -127,8 +82,8 @@
                     "virtual_key": 90
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -141,8 +96,8 @@
                     "virtual_key": 160
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -155,8 +110,8 @@
                     "virtual_key": 71
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -169,8 +124,8 @@
                     "virtual_key": 71
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -183,8 +138,8 @@
                     "virtual_key": 36
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -197,8 +152,8 @@
                     "virtual_key": 36
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -211,8 +166,8 @@
                     "virtual_key": 13
                 },
                 {
-                    "display_text": "지연시간 : 0.015초",
-                    "duration": 0.015,
+                    "display_text": "지연시간 : 0.016초",
+                    "duration": 0.016,
                     "type": "delay"
                 },
                 {
@@ -225,8 +180,8 @@
                     "virtual_key": 13
                 },
                 {
-                    "display_text": "지연시간 : 0.040초",
-                    "duration": 0.04,
+                    "display_text": "지연시간 : 0.055초",
+                    "duration": 0.055,
                     "type": "delay"
                 }
             ],
